# SeshOps

./: .env.example  .gitignore  .pre-commit-config.yaml  CONTRIBUTING.md  Dockerfile  Makefile  README.md  docker-compose.yml  pyproject.toml  requirements.txt  ruff_errors.txt
.github/workflows/: ci.yml
app/: __init__.py  main.py
app/api/: __init__.py
app/api/v1/: __init__.py  api.py  auth.py  operations.py
app/core/: __init__.py  config.py  events.py  limiter.py  logging.py  metrics.py  middleware.py  prompts.py  protocols.py  sanitisation.py  security.py
app/core/langgraph/: __init__.py  graph.py  state.py
app/models/: __init__.py  base.py  engine.py  errors.py  message.py  operations.py  session.py  thread.py  user.py
app/services/: __init__.py  database.py  llm.py  rag.py
docs/: runbook.md
docs/adr/: 001-anyio-over-asyncpg.md  002-sqlmodel-over-sqlalchemy.md  003-circular-model-fallback.md
docs/adrs/: 001-v1-carry-forward.md  002-provider-abstraction.md  003-vector-store.md  004-memory-auth.md  005-observability.md
docs/architecture/: data-model.md  key-workflows.md  system-overview.md
docs/testing/: definition-of-done.md  validation-gates.md
scripts/: e2e_demo.py
tests/: __init__.py  conftest.py
tests/api/: __init__.py  test_auth.py  test_operations.py
tests/integration/: __init__.py  test_auth_flow.py  test_pipeline.py
tests/unit/: __init__.py  test_config.py  test_database.py  test_engine.py  test_models.py  test_sanitisation.py  test_security.py
